--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,17 @@ mail:
     port: 993
     username: testrh022%40gmail.com
     password: ztygkzhlotfhfhae
+  host: smtp.gmail.com
+  port: 587
+  username: testrh022%40gmail.com
+  password: ztygkzhlotfhfhae
+  protocol: smtp
+  tls: true
+  properties.mail.smtp:
+    auth: true
+    starttls.enable: true
+    ssl.trust: smtp.gmail.com   
+     
 
 # Task execution
 server:
@@ -38,7 +49,6 @@ spring:
 spring.jpa:
   hibernate.ddl-auto: update
   show-sql: true  
-
 
 
 
